Fix spinner text overlapping spinner icon
and overflowing viewport boundaries

--- a/css/authorizer.scss
+++ b/css/authorizer.scss
@@ -195,6 +195,15 @@
 			}
 		}
 	}
+
+	// Fix spinner text overlapping spinner icon and overflowing viewport boundaries.
+	.spinner:has(.spinner-text) {
+		width: auto;
+
+		.spinner-text {
+			margin-left: 24px;
+		}
+	}
 }
 
 
